# resume.json

./: .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierrc.js  Dockerfile  README.md  buildPDF.js  commitlint.config.cjs  commitlint.config.js  docker-compose-build-pdf.yml  docker-compose-build.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  renovate.json  resume.json  resume.json.test.js  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/tests/: test-deploy-gh-page.json
.github/workflow/: deploy-gist.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  deploy-gh-page.yml  deploy-gist.yml  pr.yml  verify-pr.yml
.husky/: commit-msg  pre-commit  pre-push
docs/: index.html  index.private.html  resume.json
docs/js/: date.helper.js  header.component.js  header.element.js  json-resume.component.js  json-resume.element.js  skills.helper.js  styles.js
docs/sample-jd/: airlinen.md  (+18 more)
llm/: pyproject.toml
llm/src/llm/: introduction.py  llm.py  open_ai.py
patches/: jsonresume-theme-macchiato+1.1.0.patch  resume-cli+3.0.4.patch
public/: resume.base.json  resume.json
scripts/: build.sh  deploy.sh  setup.sh  start.sh  test.sh
src/: __tests__.helper.js  build-html.js  build-pdf.js  header.element.js  helpers.js  job-description.js  json-resume.element.js  main.css  open-ai.js  resume-to-pdf.js  resume.js  roboto.css  styles.js  tailor-resume.js  workspace.js
theme/: index.js
web-components/: helpers.js  helpers.test.js  json-resume.element.js  main.css  skill-badge.element.js
(+88 files in other folders)
