[tool.pdm]
distribution = false

[build-system]
requires = ["torch==2.2.2"]

[tool.pdm.build]
includes = []
[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    { name = "David Ng", email = "david.ng.dev@gmail.com" },
]
dependencies = [
    "openai>=1.37.1",
    "httpx>=0.27.0",
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = { text = "MIT" }

